# agentic-nlp-to-sql

./: .env.example  LICENSE  README.md  agent.ipynb  docker-compose.yml  environment.yml  ingestion.py  main.py  pyproject.toml  semantic_relationship.py  vector_index.py
fs_cache/models/: customer_db_customer.json  customer_db_customer_order.json
fs_cache/relationships/: customer_db_relationship_1.json  semantic_relationship_1.json
fs_cache/vector_index/: index.faiss  index.pkl
init/: init_db.py
